前端作業更新

--- a/perosnalProject_仁海宮_原始.htm
+++ b/perosnalProject_仁海宮_原始.htm
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+<div id="homepage">
+    <div id="nav">
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+    </div>
+</div>
+    </header>
+    <container>
+
+    </container>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
