--- a/202020918_p_網路資源/20200918_p_網路套件庫介紹-font.htm
+++ b/202020918_p_網路資源/20200918_p_網路套件庫介紹-font.htm
@@ -36,6 +36,25 @@
    <script>
     //    https://cdnjs.com
     //    JavaScript的套件庫
+    
+    //    https://www.npmjs.com
+    //    教學文: https://medium.com/html-test/從零開始-使用npm套件-317beefdf182
+    //    它是一個線上套件庫，可以下載各式各樣的 Javascript 套件來使用。
+
+    //    https://swiperjs.com/get-started/
+    //    Swiper 是一款免費以及輕量級的 JS 框架，常用於移動設備的內容觸摸滑動
+    //    最重要的是 「不需要使用到 jQuery」。
+    //    教學文: https://hackmd.io/@chupai/BkohH4KzL
+    //    常用:
+    //      1.slide
+    //      2.breakpoint
+
+    //    https://michalsnik.github.io/aos/
+    //    「Animate On Scroll Library」，是個非常簡單的頁面滾動的動態資料庫
+    //    教學:https://www.hellosanta.com.tw/blog/animate-on-scroll-library-in-nuxt
+
+
+
    </script>
 </body>
 
