--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url(backgrond.png);
+            background-image: url(https://github.com/laughpig/laughpig.github.io/blob/master/backgrond.png);
 
 
         }
