--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url(https://github.com/laughpig/laughpig.github.io/blob/master/backgrond.png);
-
+            background-image: url(01.png);
+            
+            font-family: 'Noto Serif TC', serif;
 
         }
 
@@ -26,7 +27,10 @@
             font-size: 36px;
             padding: 0;
             margin: 0;
-            letter-spacing: 15px
+            letter-spacing: 15px;
+            font-family: 'Noto Sans TC', sans-serif;
+            
+
         }
 
         h2 {
