--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
         #homepage {
             width: 100%;
             height: 100vh;
-            background-color: pink;
+            background-color: transparent;
             background-image: url();
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
             display: flex;
+            background-image: url(BANNER.png);
+            background-position:center ;
 
 
         }
@@ -59,10 +61,11 @@
         #nav {
             width: 100%;
             height: 10vh;
-            background-color: aquamarine;
-            margin-top: 65vh;
+            background-color:transparent;
+            margin-top: 80vh;
             display: flex;
             justify-content: center;
+            color:white;
         }
 
         #nav i {
@@ -70,6 +73,10 @@
             line-height: 10vh;
             font-size: 30px;
             margin: 0 40px;
+            font-family: 'Noto Serif TC', serif;
+            font-weight: 700;
+            font-style: normal;
+            background-image: url();
         }
 
         .container-s {
