--- a/20200923_表單仿作/20200923-form.htm
+++ b/20200923_表單仿作/20200923-form.htm
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id="header"><h1>您的調查問卷</h1></div>
+    <div id="textbox">
+        <h4>這是一份不那麼中藥的問卷，但還是請您用心回復＜3</h4>
+    </div>
     <div id="footer">
         <div id="container">
         <div class="box-S">
@@ -65,15 +68,15 @@
             <label for="Hobby">騎單車</label>
             <input type="checkbox" name="Hobby" id="其他">
             <label for="Hobby">其他</label>
-            <input type="text" name="" id="">
+            <input type="text" name="" id="other" placeholder="其他興趣">
             
         </div>
         <div class="box-XL">
             <div class="title"><h2>想說的話 | Reply</h2></div>
-            <label for="滿意"><h3>滿意這份問卷嗎？說說你想說的話吧！</h3></label>
+            <label for="滿意"><h4>滿意這份問卷嗎？說說你想說的話吧！</h4></label>
             <br>
             
-            <textarea name="reply" id="reply" cols="30" rows="10"></textarea>
+            <textarea name="reply" id="reply" cols="30" rows="12"placeholder="您的回覆"></textarea>
         </div>
         <input id="send"type="submit" value="送出資料">
     </div>
